--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "env": { "browser": true, "es2020": true },
+  "rules": {
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    "import/no-unresolved": "off",
+    "no-param-reassign": "off"
+  }
 }
